[gd_scene load_steps=8 format=3 uid="uid://bdxxx5u4gtbd5"]

[ext_resource type="Script" path="res://Scripts/GameLogic/dot.gd" id="1_d7cel"]
[ext_resource type="AudioStream" uid="uid://cbnkxanfcovqh" path="res://Sounds/Sound_Effects/shatter.mp3" id="2_kd7gv"]
[ext_resource type="AudioStream" uid="uid://bh2ww0bjnrnw1" path="res://Sounds/Sound_Effects/unshatter.mp3" id="3_q1uke"]
[ext_resource type="AudioStream" uid="uid://dsndk408qqi1w" path="res://Sounds/Sound_Effects/break.mp3" id="4_d4gki"]

[sub_resource type="Animation" id="Animation_anf3q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xt4kd"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.517647)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8hudy"]
_data = {
"RESET": SubResource("Animation_anf3q"),
"fade": SubResource("Animation_xt4kd")
}

[node name="modifier" type="Node2D"]
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.3, 0.3)
script = ExtResource("1_d7cel")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(-3.33786e-06, 0)
scale = Vector2(1.515, 1)
polygon = PackedVector2Array(0, -6.66667, 19.802, 9.90099, -19.802, 9.90099)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8hudy")
}

[node name="break" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_kd7gv")
volume_db = -14.677

[node name="repair" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_q1uke")

[node name="icon" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.2, 0.2)

[node name="flare" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_d4gki")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="finished" from="break" to="." method="_on_break_finished"]
[connection signal="finished" from="repair" to="." method="_on_repair_finished"]
[connection signal="finished" from="flare" to="." method="_on_flare_finished"]
